Edit models of WinningData for count and rank in unique & Edit parse_lotto.py for get_one_lotto_number_data, get_all_lotto_number_data, get_lotto_number_data

--- a/show_me_the_money/lotto/templates/test/lotto_data.html
+++ b/show_me_the_money/lotto/templates/test/lotto_data.html
@@ -1,1 +1,11 @@
+<h1>LOTTO DATA</h1>
+{{ lotto_data }}
+
+<h1>LOTTO NUMBER SUM</h1>
+{{ lotto_number_sum }}
+
+<h1>LOTTO NUMBER WIN COUNT </h1>
+{{ lotto_number_win_count }}
+
+<h1>LOTTO NUMBER EACH WIN COUNT</h1>
 {{ lotto_number_each_win_count }}
