--- a/lotto/templates/index.html
+++ b/lotto/templates/index.html
@@ -1,482 +1,9 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+{% include 'base.html' %}
+{% block style %}
+{% endblock  %}
 
-<!DOCTYPE HTML>
-<html>
+{% block content %}
+{% endblock  %}
 
-<head>
-	<title>Minimal an Admin Panel Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Minimal Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-
-	{% load static %}
-
-	<script
-		type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-
-	<link href="{% static 'css/bootstrap.min.css' %}" rel='stylesheet' type='text/css' />
-
-	<!-- Custom Theme files -->
-	<link href="{% static 'css/style.css' %}" rel='stylesheet' type='text/css' />
-	<link href="{% static 'css/font-awesome.css' %}" rel="stylesheet">
-	<script src="{% static 'js/jquery.min.js' %}"> </script>
-
-	<!-- Mainly scripts -->
-	<script src="{% static 'js/jquery.metisMenu.js' %}"></script>
-	<script src="{% static 'js/jquery.slimscroll.min.js' %}"></script>
-
-	<!-- Custom and plugin javascript -->
-	<link href="{% static 'css/custom.css' %}" rel="stylesheet">
-	<script src="{% static 'js/custom.js' %}"></script>
-	<script src="{% static 'js/screenfull.js' %}"></script>
-
-	<script>
-		$(function () {
-			$('#supported').text('Supported/allowed: ' + !!screenfull.enabled);
-
-			if (!screenfull.enabled) {
-				return false;
-			}
-
-			$('#toggle').click(function () {
-				screenfull.toggle($('#container')[0]);
-			});
-		});
-	</script>
-
-	<!--pie-chart--->
-	<script src="{% static 'js/pie-chart.js' %}" type="text/javascript"></script>
-	<script type="text/javascript">
-
-		$(document).ready(function () {
-			$('#demo-pie-1').pieChart({
-				barColor: '#3bb2d0',
-				trackColor: '#eee',
-				lineCap: 'round',
-				lineWidth: 8,
-				onStep: function (from, to, percent) {
-					$(this.element).find('.pie-value').text(Math.round(percent) + '%');
-				}
-			});
-
-			$('#demo-pie-2').pieChart({
-				barColor: '#fbb03b',
-				trackColor: '#eee',
-				lineCap: 'butt',
-				lineWidth: 8,
-				onStep: function (from, to, percent) {
-					$(this.element).find('.pie-value').text(Math.round(percent) + '%');
-				}
-			});
-
-			$('#demo-pie-3').pieChart({
-				barColor: '#ed6498',
-				trackColor: '#eee',
-				lineCap: 'square',
-				lineWidth: 8,
-				onStep: function (from, to, percent) {
-					$(this.element).find('.pie-value').text(Math.round(percent) + '%');
-				}
-			});
-		});
-	</script>
-
-	<!--skycons-icons-->
-	<script src="{% static 'js/skycons.js' %}"></script>
-
-	<!--graph-->
-	<link rel="stylesheet" href="{% static 'css/graph.css' %}">
-	<!--//graph-->
-	<script src="{% static 'js/jquery.flot.js' %}"></script>
-
-	<script>
-		$(document).ready(function () {
-
-			// Graph Data ##############################################
-			var graphData = [{
-				// Visits
-				data: [[6, 1300], [7, 1600], [8, 1900], [9, 2100], [10, 2500], [11, 2200], [12, 2000], [13, 1950], [14, 1900], [15, 2000]],
-				color: '#999999'
-			}, {
-				// Returning Visits
-				data: [[6, 500], [7, 600], [8, 550], [9, 600], [10, 800], [11, 900], [12, 800], [13, 850], [14, 830], [15, 1000]],
-				color: '#999999',
-				points: { radius: 4, fillColor: '#7f8c8d' }
-			}
-			];
-
-			// Lines Graph #############################################
-			$.plot($('#graph-lines'), graphData, {
-				series: {
-					points: {
-						show: true,
-						radius: 5
-					},
-					lines: {
-						show: true
-					},
-					shadowSize: 0
-				},
-				grid: {
-					color: '#7f8c8d',
-					borderColor: 'transparent',
-					borderWidth: 20,
-					hoverable: true
-				},
-				xaxis: {
-					tickColor: 'transparent',
-					tickDecimals: 2
-				},
-				yaxis: {
-					tickSize: 1000
-				}
-			});
-
-			// Bars Graph ##############################################
-			$.plot($('#graph-bars'), graphData, {
-				series: {
-					bars: {
-						show: true,
-						barWidth: .9,
-						align: 'center'
-					},
-					shadowSize: 0
-				},
-				grid: {
-					color: '#7f8c8d',
-					borderColor: 'transparent',
-					borderWidth: 20,
-					hoverable: true
-				},
-				xaxis: {
-					tickColor: 'transparent',
-					tickDecimals: 2
-				},
-				yaxis: {
-					tickSize: 1000
-				}
-			});
-
-			// Graph Toggle ############################################
-			$('#graph-bars').hide();
-
-			$('#lines').on('click', function (e) {
-				$('#bars').removeClass('active');
-				$('#graph-bars').fadeOut();
-				$(this).addClass('active');
-				$('#graph-lines').fadeIn();
-				e.preventDefault();
-			});
-
-			$('#bars').on('click', function (e) {
-				$('#lines').removeClass('active');
-				$('#graph-lines').fadeOut();
-				$(this).addClass('active');
-				$('#graph-bars').fadeIn().removeClass('hidden');
-				e.preventDefault();
-			});
-
-			// Tooltip #################################################
-			function showTooltip(x, y, contents) {
-				$('<div id="tooltip">' + contents + '</div>').css({
-					top: y - 16,
-					left: x + 20
-				}).appendTo('body').fadeIn();
-			}
-
-			var previousPoint = null;
-
-			$('#graph-lines, #graph-bars').bind('plothover', function (event, pos, item) {
-				if (item) {
-					if (previousPoint != item.dataIndex) {
-						previousPoint = item.dataIndex;
-						$('#tooltip').remove();
-						var x = item.datapoint[0],
-							y = item.datapoint[1];
-						showTooltip(item.pageX, item.pageY, y + ' visitors at ' + x + '.00h');
-					}
-				} else {
-					$('#tooltip').remove();
-					previousPoint = null;
-				}
-			});
-		});
-	</script>
-
-	<!----Calender -------->
-	<link rel="stylesheet" href="{% static 'css/clndr.css' %}" type="text/css" />
-	<script src="{% static 'js/underscore-min.js' %}" type="text/javascript"></script>
-	<script src="{% static 'js/moment-2.2.1.js' %}" type="text/javascript"></script>
-	<script src="{% static 'js/clndr.js' %}" type="text/javascript"></script>
-	<script src="{% static 'js/site.js' %}" type="text/javascript"></script>
-	<!----End Calender -------->
-
-	<!-- requried-jsfiles-for owl -->
-	<link href="{% static 'css/owl.carousel.css' %}" rel="stylesheet">
-	<script src="{% static 'js/owl.carousel.js' %}"></script>
-	<script>
-		$(document).ready(function () {
-			$("#owl-demo").owlCarousel({
-				items: 3,
-				lazyLoad: true,
-				autoPlay: true,
-				pagination: true,
-				nav: true,
-			});
-		});
-	</script>
-	<!-- //requried-jsfiles-for owl -->
-
-	<!--scrolling js-->
-	<script src="{% static 'js/jquery.nicescroll.js' %}"></script>
-	<script src="{% static 'js/scripts.js' %}"></script>
-	<!--//scrolling js-->
-	<script src="{% static 'js/bootstrap.min.js' %}"> </script>
-</head>
-
-<body>
-	<div id="wrapper">
-
-		<!----->
-		<nav class="navbar-default navbar-static-top" role="navigation">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<h1> <a class="navbar-brand" href="index.html">Minimal</a></h1>
-			</div>
-			<div class=" border-bottom">
-				<div class="full-left">
-					<section class="full-top">
-						<button id="toggle"><i class="fa fa-arrows-alt"></i></button>
-					</section>
-					<form class=" navbar-left-right">
-						<input type="text" value="Search..." onfocus="this.value = '';"
-							onblur="if (this.value == '') {this.value = 'Search...';}">
-						<input type="submit" value="" class="fa fa-search">
-					</form>
-					<div class="clearfix"> </div>
-				</div>
-
-
-				<!-- Brand and toggle get grouped for better mobile display -->
-
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="drop-men">
-					<ul class=" nav_1">
-						<li class="dropdown at-drop">
-							<a href="#" class="dropdown-toggle dropdown-at " data-toggle="dropdown"><i
-									class="fa fa-globe"></i> <span class="number">5</span></a>
-							<ul class="dropdown-menu menu1 " role="menu">
-								<li><a href="#">
-										<div class="user-new">
-											<p>New user registered</p>
-											<span>40 seconds ago</span>
-										</div>
-										<div class="user-new-left">
-
-											<i class="fa fa-user-plus"></i>
-										</div>
-										<div class="clearfix"> </div>
-									</a></li>
-								<li><a href="#">
-										<div class="user-new">
-											<p>Someone special liked this</p>
-											<span>3 minutes ago</span>
-										</div>
-										<div class="user-new-left">
-
-											<i class="fa fa-heart"></i>
-										</div>
-										<div class="clearfix"> </div>
-									</a></li>
-								<li><a href="#">
-										<div class="user-new">
-											<p>John cancelled the event</p>
-											<span>4 hours ago</span>
-										</div>
-										<div class="user-new-left">
-
-											<i class="fa fa-times"></i>
-										</div>
-										<div class="clearfix"> </div>
-									</a></li>
-								<li><a href="#">
-										<div class="user-new">
-											<p>The server is status is stable</p>
-											<span>yesterday at 08:30am</span>
-										</div>
-										<div class="user-new-left">
-
-											<i class="fa fa-info"></i>
-										</div>
-										<div class="clearfix"> </div>
-									</a></li>
-								<li><a href="#">
-										<div class="user-new">
-											<p>New comments waiting approval</p>
-											<span>Last Week</span>
-										</div>
-										<div class="user-new-left">
-
-											<i class="fa fa-rss"></i>
-										</div>
-										<div class="clearfix"> </div>
-									</a></li>
-								<li><a href="#" class="view">View all messages</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle dropdown-at" data-toggle="dropdown"><span
-									class=" name-caret">Rackham<i class="caret"></i></span><img
-									src="{% static 'images/wo.jpg' %}"></a>
-							<ul class="dropdown-menu " role="menu">
-								<li><a href="profile.html"><i class="fa fa-user"></i>Edit Profile</a></li>
-								<li><a href="inbox.html"><i class="fa fa-envelope"></i>Inbox</a></li>
-								<li><a href="calendar.html"><i class="fa fa-calendar"></i>Calender</a></li>
-								<li><a href="inbox.html"><i class="fa fa-clipboard"></i>Tasks</a></li>
-							</ul>
-						</li>
-
-					</ul>
-				</div><!-- /.navbar-collapse -->
-				<div class="clearfix">
-
-				</div>
-
-				<div class="navbar-default sidebar" role="navigation">
-					<div class="sidebar-nav navbar-collapse">
-						<ul class="nav" id="side-menu">
-
-							<li>
-								<a href="index.html" class=" hvr-bounce-to-right"><i
-										class="fa fa-dashboard nav_icon "></i><span class="nav-label">Dashboards</span>
-								</a>
-							</li>
-
-							<li>
-								<a href="#" class=" hvr-bounce-to-right"><i class="fa fa-indent nav_icon"></i> <span
-										class="nav-label">Menu Levels</span><span class="fa arrow"></span></a>
-								<ul class="nav nav-second-level">
-									<li><a href="graphs.html" class=" hvr-bounce-to-right"> <i
-												class="fa fa-area-chart nav_icon"></i>Graphs</a></li>
-
-									<li><a href="maps.html" class=" hvr-bounce-to-right"><i
-												class="fa fa-map-marker nav_icon"></i>Maps</a></li>
-
-									<li><a href="typography.html" class=" hvr-bounce-to-right"><i
-												class="fa fa-file-text-o nav_icon"></i>Typography</a></li>
-
-								</ul>
-							</li>
-							<li>
-								<a href="inbox.html" class=" hvr-bounce-to-right"><i class="fa fa-inbox nav_icon"></i>
-									<span class="nav-label">Inbox</span> </a>
-							</li>
-
-							<li>
-								<a href="gallery.html" class=" hvr-bounce-to-right"><i
-										class="fa fa-picture-o nav_icon"></i> <span class="nav-label">Gallery</span>
-								</a>
-							</li>
-							<li>
-								<a href="#" class=" hvr-bounce-to-right"><i class="fa fa-desktop nav_icon"></i> <span
-										class="nav-label">Pages</span><span class="fa arrow"></span></a>
-								<ul class="nav nav-second-level">
-									<li><a href="404.html" class=" hvr-bounce-to-right"> <i
-												class="fa fa-info-circle nav_icon"></i>Error 404</a></li>
-									<li><a href="faq.html" class=" hvr-bounce-to-right"><i
-												class="fa fa-question-circle nav_icon"></i>FAQ</a></li>
-									<li><a href="blank.html" class=" hvr-bounce-to-right"><i
-												class="fa fa-file-o nav_icon"></i>Blank</a></li>
-								</ul>
-							</li>
-							<li>
-								<a href="layout.html" class=" hvr-bounce-to-right"><i class="fa fa-th nav_icon"></i>
-									<span class="nav-label">Grid Layouts</span> </a>
-							</li>
-
-							<li>
-								<a href="#" class=" hvr-bounce-to-right"><i class="fa fa-list nav_icon"></i> <span
-										class="nav-label">Forms</span><span class="fa arrow"></span></a>
-								<ul class="nav nav-second-level">
-									<li><a href="forms.html" class=" hvr-bounce-to-right"><i
-												class="fa fa-align-left nav_icon"></i>Basic forms</a></li>
-									<li><a href="validation.html" class=" hvr-bounce-to-right"><i
-												class="fa fa-check-square-o nav_icon"></i>Validation</a></li>
-								</ul>
-							</li>
-
-							<li>
-								<a href="#" class=" hvr-bounce-to-right"><i class="fa fa-cog nav_icon"></i> <span
-										class="nav-label">Settings</span><span class="fa arrow"></span></a>
-								<ul class="nav nav-second-level">
-									<li><a href="signin.html" class=" hvr-bounce-to-right"><i
-												class="fa fa-sign-in nav_icon"></i>Signin</a></li>
-									<li><a href="signup.html" class=" hvr-bounce-to-right"><i
-												class="fa fa-sign-in nav_icon"></i>Singup</a></li>
-								</ul>
-							</li>
-						</ul>
-					</div>
-				</div>
-		</nav>
-		<div id="page-wrapper" class="gray-bg dashbard-1">
-			<div class="content-main">
-				<!--banner-->
-				<div class="banner">
-					<h2>
-						<a href="index.html">Home</a>
-						<i class="fa fa-angle-right"></i>
-						<span>Dashboard</span>
-					</h2>
-				</div>
-				<!--//banner-->
-
-				<!--content-->
-
-				
-						
-					
-						
-	
-
-				
-
-					<div class="col-md-7 mid-content-top">
-						
-
-
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<!----->
-
-										
-										
-								
-								
-							
-				</div>
-				<!--//content-->
-
-				<!---->
-				<div class="copy">
-					<p> &copy; 2016 Minimal. All Rights Reserved .</p>
-				</div>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-	<!---->
-</body>
-</html>
+{% block script %}
+{% endblock  %}
