--- a/accounts/templates/signin.html
+++ b/accounts/templates/signin.html
@@ -26,14 +26,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<h1><a href="index.html">Minimal </a></h1>
 		<div class="login-bottom">
 			<h2>Login</h2>
-			<form>
+			<form action="{% url 'accounts:signin' %}" method='POST'>
 			<div class="col-md-6">
+				<input type='hidden' name='csrfmiddlewaretoken' value='{{ csrf_token }}'>
+
 				<div class="login-mail">
-					<input type="text" placeholder="Email" required="">
+					<input type="text" name='username' placeholder="Email" required="">
 					<i class="fa fa-envelope"></i>
 				</div>
 				<div class="login-mail">
-					<input type="password" placeholder="Password" required="">
+					<input type="password" name='password' placeholder="Password" required="">
 					<i class="fa fa-lock"></i>
 				</div>
 				   <a class="news-letter " href="#">
@@ -47,7 +49,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<input type="submit" value="login">
 					</label>
 					<p>Do not have an account?</p>
-				<a href="signup.html" class="hvr-shutter-in-horizontal">Signup</a>
+				<a href="{% url 'accounts:signup' %}" class="hvr-shutter-in-horizontal">Signup</a>
 			</div>
 			
 			<div class="clearfix"> </div>
@@ -56,7 +58,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 		<!---->
 <div class="copy-right">
-            <p> &copy; 2016 Minimal. All Rights Reserved .</p>	    </div>  
+    <p> &copy; 2016 Minimal. All Rights Reserved .</p>	    
+</div>  
 <!---->
 <!--scrolling js-->
 	<script src="js/jquery.nicescroll.js"></script>
