--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -8,65 +8,88 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Minimal an Admin Panel Category Flat Bootstrap Responsive Website Template | Signup :: w3layouts</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Minimal Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<link href="css/bootstrap.min.css" rel='stylesheet' type='text/css' />
-<!-- Custom Theme files -->
-<link href="css/style.css" rel='stylesheet' type='text/css' />
-<link href="css/font-awesome.css" rel="stylesheet"> 
-<script src="js/jquery.min.js"> </script>
-<script src="js/bootstrap.min.js"> </script>
+	<title>TOUCH THE JACKPOT - SHOW ME THE MONEY</title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="keywords" content="Lotto, Jackpot, Money, Win, Winner" />
+
+	{% load static %}
+
+	<script type="application/x-javascript">
+		addEventListener("load", function () {
+			setTimeout(hideURLbar, 0);
+		}, false);
+
+		function hideURLbar() {
+			window.scrollTo(0, 1);
+		}
+	</script>
+
+	<link href="{% static 'css/bootstrap.min.css' %}" rel='stylesheet' type='text/css'/>
+
+	<!-- Custom Theme files -->
+	<link href="{% static 'css/style.css' %}" rel='stylesheet' type='text/css' />
+	<link href="{% static 'css/font-awesome.css' %}" rel="stylesheet">
+	<script src="{% static 'js/jquery.min.js' %}"> </script>
+
+	<!-- Mainly scripts -->
+	<script src="{% static 'js/jquery.metisMenu.js' %}"></script>
+	<script src="{% static 'js/jquery.slimscroll.min.js' %}"></script>
+
+	<!-- Custom and plugin javascript -->
+	<link href="{% static 'css/custom.css' %}" rel="stylesheet">
+	<script src="{% static 'js/custom.js' %}"></script>
+	<script src="{% static 'js/screenfull.js' %}"></script>
 </head>
 <body>
 	<div class="login">
-		<h1><a href="index.html">Minimal </a></h1>
+		<h1><a href="{% url 'lotto:index' %}">Touch The JackPot</a></h1>
+		<h4 class="text-center">WelCome To Show Me The Money</h4>
+		
 		<div class="login-bottom">
 			<h2>Register</h2>
 
-			<form action=" {% url 'accounts:signup' %} " method='POST'>
-			<div class="col-md-6">
-				<input type='hidden' name='csrfmiddlewaretoken' value='{{ csrf_token }}'>
+			<form method="POST">
+				{% csrf_token %}
 
-				<div class="login-mail">
-					<input type="text" name='username' placeholder="Email" required="">
-					<i class="fa fa-envelope"></i>
+				<div class="col-md-6">
+					<div class="login-mail">
+						<input type="text" name="username" placeholder="Email" required="">
+						<i class="fa fa-envelope"></i>
+					</div>
+					<div class="login-mail">
+						<input type="password" name="password1" placeholder="Password" required="">
+						<i class="fa fa-lock"></i>
+					</div>
+					<div class="login-mail">
+						<input type="password" name="password2" placeholder="Repeated password" required="">
+						<i class="fa fa-lock"></i>
+					</div>
 				</div>
-				<div class="login-mail">
-					<input type="password" name='password1' placeholder="Password" required="">
-					<i class="fa fa-lock"></i>
-				</div>
-				<div class="login-mail">
-					<input type="password" name='password2' placeholder="Repeated password" required="">
-					<i class="fa fa-lock"></i>
-				</div>
-				  <a class="news-letter" href="#">
-					<label class="checkbox1"><input type="checkbox" name="checkbox" ><i> </i>I agree with the terms</label>
-				</a>
-			</div>
 
-			<div class="col-md-6 login-do">
-				<label class="hvr-shutter-in-horizontal login-sub">
-					<input type="submit" value="Submit">
-				</label>
-
-				<p>Already register</p>
-				<a href="{% url 'accounts:signin' %}" class="hvr-shutter-in-horizontal">Login</a>
-			</div>
-			<div class="clearfix"></div>
+				<div class="col-md-6 login-do">
+					<label class="hvr-shutter-in-horizontal login-sub">
+						<input type="submit" value="Submit">
+						</label>
+						<p>Already register?</p>
+					<a href="{% url 'accounts:login' %}" class="hvr-shutter-in-horizontal">Login</a>
+				</div>
+				
+				<div class="clearfix"> </div>
 			</form>
+
+			<div class="text-center">{{ message }}</div>
 		</div>
 	</div>
-		<!---->
-<div class="copy-right">
-    <p> &copy; 2016 Minimal. All Rights Reserved .</p>
-</div>
+	
+	<!---->
+	<div class="copy-right">
+            <p> &copy; 2016 Minimal. All Rights Reserved .</p>	    </div>
 	  
-<!---->
-<!--scrolling js-->
+	<!---->
+
+	<!--scrolling js-->
 	<script src="js/jquery.nicescroll.js"></script>
 	<script src="js/scripts.js"></script>
 	<!--//scrolling js-->
