--- a/lotto/templates/index.html
+++ b/lotto/templates/index.html
@@ -7,25 +7,24 @@
 
 {% block content %}
     <div class="section">
-            <h1>JackPot</h1>
-            <h2>Show Me The Money</h2>
+        <h1>JackPot</h1>
+        <h2>Show Me The Money</h2>
 
-            <ul>
-                <li style="display:inline-block; margin-left:10px;">
-                    <a class="section-1-button" rel="noopener" href="https://alvarotrigo.com/fullPage/extensions/">Extensions</a>
-                </li>
-                <li id="download" style="display:inline-block; margin-left:10px;">
-                    <a class="section-1-button" href="https://github.com/alvarotrigo/fullpage.js/archive/master.zip" rel="noopener">Download</a>
-                </li>
-                <li style="display:inline-block; margin-left:10px;">
-                    <a class="section-1-button" href="https://github.com/alvarotrigo/fullpage.js" rel="noopener">View on GitHub</a>
-                </li>
-            </ul>
+        <ul>
+            <li style=-"display:inline-block; margin-left:10px;">
+                <a class="section-1-button" rel="noopener" href="https://alvarotrigo.com/fullPage/extensions/">Extensions</a>
+            </li>
+            <li id="download" style="display:inline-block; margin-left:10px;">
+                <a class="section-1-button" href="https://github.com/alvarotrigo/fullpage.js/archive/master.zip" rel="noopener">Download</a>
+            </li>
+            <li style="display:inline-block; margin-left:10px;">
+                <a class="section-1-button" href="https://github.com/alvarotrigo/fullpage.js" rel="noopener">View on GitHub</a>
+            </li>
+        </ul>
     </div>
 
     <div class="section">Some section2</div>
     <div class="section">Some section3</div>
-    <div class="section">Some section4</div>
 {% endblock  %}
 
 {% block script %}
