--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
 			controlArrows : true,
 			verticalCentered: true,
 			responsiveHeight: 330,
-			sectionsColor: ['#000000', '#000000', '#000000', '#000000', '#000000']
+			sectionsColor: ['#ffffff', '#ffffff', '#ffffff', '#ffffff', '#ffffff']
 		});
 	</script>
 
