Edit Auth form and refectoring bootstrap

--- a/lotto/templates/index.html
+++ b/lotto/templates/index.html
@@ -6,7 +6,7 @@
 {% endblock style %}
 
 {% block content %}
-    <div class="section">
+    <div class="section active">
             <h1>JackPot</h1>
             <h2>Show Me The Money</h2>
             <button>500 won!!</button>
