--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -1,98 +1,64 @@
 
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE HTML>
-<html>
-<head>
-	<title>TOUCH THE JACKPOT - SHOW ME THE MONEY</title>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Jekyll v3.8.6">
+    <title>Signin Template · Bootstrap</title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Lotto, Jackpot, Money, Win, Winner" />
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/sign-in/">
 
-	{% load static %}
+    <!-- Bootstrap core CSS -->
+<link href="https://getbootstrap.com/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-	<script type="application/x-javascript">
-		addEventListener("load", function () {
-			setTimeout(hideURLbar, 0);
-		}, false);
+    <!-- Favicons -->
+<link rel="apple-touch-icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+<link rel="icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+<link rel="icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+<link rel="manifest" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/manifest.json">
+<link rel="mask-icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
+<link rel="icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/favicon.ico">
+<meta name="msapplication-config" content="https://getbootstrap.com/docs/4.4/assets/img/favicons/browserconfig.xml">
+<meta name="theme-color" content="#563d7c">
 
-		function hideURLbar() {
-			window.scrollTo(0, 1);
-		}
-	</script>
 
-	<link href="{% static 'css/bootstrap.min.css' %}" rel='stylesheet' type='text/css'/>
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
 
-	<!-- Custom Theme files -->
-	<link href="{% static 'css/style.css' %}" rel='stylesheet' type='text/css' />
-	<link href="{% static 'css/font-awesome.css' %}" rel="stylesheet">
-	<script src="{% static 'js/jquery.min.js' %}"> </script>
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+    <!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/docs/4.4/examples/sign-in/signin.css" rel="stylesheet">
+  </head>
+  <body class="text-center">
+    <form action="{% url "accounts:signup" %}" class="form-signin" method='POST'>
+	{% csrf_token %}
+  <img class="mb-4" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+  <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+  <label for="inputEmail" class="sr-only">Email address</label>
+  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus name="username">
+  <label for="inputPassword" class="sr-only">Password</label>
+  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required name='password1'>
+	<input type="password" id="inputPassword" class="form-control" placeholder="Password check" required name='password2'>
 
-	<!-- Mainly scripts -->
-	<script src="{% static 'js/jquery.metisMenu.js' %}"></script>
-	<script src="{% static 'js/jquery.slimscroll.min.js' %}"></script>
-
-	<!-- Custom and plugin javascript -->
-	<link href="{% static 'css/custom.css' %}" rel="stylesheet">
-	<script src="{% static 'js/custom.js' %}"></script>
-	<script src="{% static 'js/screenfull.js' %}"></script>
-</head>
-<body>
-	<div class="login">
-		<h1><a href="{% url 'lotto:index' %}">Touch The JackPot</a></h1>
-		<h4 class="text-center">WelCome To Show Me The Money</h4>
-		
-		<div class="login-bottom">
-			<h2>Register</h2>
-
-			<form method="POST">
-				{% csrf_token %}
-
-				<div class="col-md-6">
-					<div class="login-mail">
-						<input type="text" name="username" placeholder="Email" required="">
-						<i class="fa fa-envelope"></i>
-					</div>
-					<div class="login-mail">
-						<input type="password" name="password1" placeholder="Password" required="">
-						<i class="fa fa-lock"></i>
-					</div>
-					<div class="login-mail">
-						<input type="password" name="password2" placeholder="Repeated password" required="">
-						<i class="fa fa-lock"></i>
-					</div>
-				</div>
-
-				<div class="col-md-6 login-do">
-					<label class="hvr-shutter-in-horizontal login-sub">
-						<input type="submit" value="Submit">
-						</label>
-						<p>Already register?</p>
-					<a href="{% url 'accounts:login' %}" class="hvr-shutter-in-horizontal">Login</a>
-				</div>
-				
-				<div class="clearfix"> </div>
-			</form>
-
-			<div class="text-center">{{ message }}</div>
-		</div>
-	</div>
-	
-	<!---->
-	<div class="copy-right">
-            <p> &copy; 2016 Minimal. All Rights Reserved .</p>	    </div>
-	  
-	<!---->
-
-	<!--scrolling js-->
-	<script src="js/jquery.nicescroll.js"></script>
-	<script src="js/scripts.js"></script>
-	<!--//scrolling js-->
+  <div class="checkbox mb-3">
+    
+  </div>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+</form>
 </body>
 </html>
-
