Move css/base.css in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 	{% load static %}
 
 	<link rel="stylesheet" href="{% static 'css/fullpage.css' %}">
+	<link rel="stylesheet" href="{% static 'css/base.css' %}">
 	<link href="https://fonts.googleapis.com/css?family=Lilita+One&display=swap" rel="stylesheet">
 	
 	{% block style %}
